# CTO-TEST-AI-trading-Bot

./: .env.production.example  .gitignore  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SUMMARY.md  FEATURE_COMPLETION_MATRIX.md  FEATURE_TRACEABILITY_MATRIX.md  OPERATIONAL_RUNBOOK.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_IMPLEMENTATION_GUIDE.md  README.md  README_DEPLOYMENT.md  TESTING_GUIDE.md  TIER0_DEEP_AUDIT_RECALL.md  TIER0_IMPLEMENTATION_COMPLETE.md  docker-compose.prod-ready.yml  main.py
.github/workflows/: deep-audit.yml
config/: settings.yaml
execution/: cex_executor.py  smart_order_router.py
interface/: __init__.py  dashboard_api.py  telegram_bot.py  websocket_manager.py
interface/routes/: __init__.py  config.py  orders.py  positions.py  risk.py
interface/static/: index.html
monitoring/: __init__.py  alertmanager.yml  health_checks.py  metrics.py  prometheus.yml  tracing.py
proto/: bridge.proto  dex.proto  macro.proto  market_data.proto  orders.proto  risk.proto  signals.proto
research/notebooks/: 01_data_exploration.ipynb  02_feature_analysis.ipynb  03_signal_research.ipynb  04_walk_forward.ipynb  05_macro_analysis.ipynb  PRODUCTION_AUDIT.ipynb
research/utils/: backtest_runner.py  data_loader.py  feature_engineering.py  visualization.py
rust/: Cargo.toml
rust/gateway/: Cargo.toml  build.rs
rust/gateway/src/: lib.rs
rust/order-matcher/: Cargo.toml
rust/order-matcher/benches/: matcher_bench.rs
rust/order-matcher/src/: lib.rs
rust/py-bindings/: Cargo.toml  pyproject.toml
rust/py-bindings/src/: lib.rs
rust/risk-engine/: Cargo.toml
rust/risk-engine/src/: lib.rs
rust/tick-parser/: Cargo.toml
rust/tick-parser/benches/: tick_bench.rs
rust/tick-parser/src/: lib.rs
scripts/: deep_audit_full.sh  deep_audit_tier0.sh  deep_audit_tier1.sh  deep_audit_tier2.sh  generate_proto.sh  health_check.sh  migrate.py  preflight_live_trading.py  prepare_live_config.py  professional_governance_all.sh  setup_cron.sh
services/bridge-api/: tsconfig.json
services/bridge-api/src/: index.ts
storage/: cache.py  db_handler.py
tests/e2e/: test_stack.py
tests/unit/: test_backtester.py  test_event_bus.py  test_normalizer.py  test_nueral_trader_5_regime.py  test_nueral_trader_5_tick_processor.py  test_nueral_trader_5_validators.py  test_risk_manager.py  test_smart_order_router.py
ts/dex-layer/: Dockerfile  package.json
ts/dex-layer/src/common/: logger.ts  mev-protection.ts  types.ts
ts/dex-layer/src/dydx/: executor.ts
ts/dex-layer/src/pancakeswap/: executor.ts
ts/dex-layer/src/server/: index.ts
ts/dex-layer/src/sushiswap/: executor.ts
ts/dex-layer/src/uniswap/: executor.ts  test_nueral_trader_5_executor.test.ts
ui/app/: Dockerfile  nginx.conf
ui/app/src/: App.css  App.tsx  styles.css
