[workspace]
members = [
    "tick-parser",
    "order-matcher",
    "py-bindings",
    "risk-engine",
    "gateway",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["neural-trader-v4"]
license = "MIT"

[workspace.dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
log = "0.4"
anyhow = "1.0"
crossbeam = "0.8"
crossbeam-epoch = "0.9"
crossbeam-skiplist = "0.1"
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"
parking_lot = "0.12"
tokio = { version = "1.36", features = ["full"] }
tonic = "0.11"
prost = "0.12"
bytes = "1.5"
smallvec = "1.13"
ahash = "0.8"
rand = "0.8"
rand_chacha = "0.3"
memmap2 = "0.9"
rayon = "1.9"
num_cpus = "1.16"
atomic = "0.6"
dashmap = "5.5"
proptest = "1.4"
criterion = "0.5"
async-trait = "0.1"
futures = "0.3"
pin-project = "1.1"
async-stream = "0.3"
prometheus = "0.13"
hyper = "1.2"
tower = "0.4"
once_cell = "1.19"
