[build-system]
requires = ["maturin>=1.4,<2"]
build-backend = "maturin"

[project]
name = "neural-trader-rust"
version = "0.1.0"
description = "Rust hot-path extensions for neural-trader-v4"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "neural_trader_rust"
