[build-system]
requires = ["maturin>=1.4,<2"]
build-backend = "maturin"

[project]
name = "nueral-trader-5-rust"
version = "0.1.0"
description = "Rust hot-path extensions for NUERAL-TRADER-5"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "neural_trader_rust"
